--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,13 +34,12 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
-  light:      #f4f4f4,
-  dark:       #222
+        primary:    #003300,
+        secondary:  #f0b840,
+        danger:     #f53d3d,
+        light:      #f4f4f4,
+        dark:       #222
 );
-
 
 // App iOS Variables
 // --------------------------------------------------
