Final version of Switch.

--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -9,6 +9,8 @@
     <ion-content>
         <ion-list>
             <ion-list-header color="secondary">Navigate</ion-list-header>
+            <button ion-item menuClose>Home</button>
+            <button ion-item menuClose (click)="goToSettings()">Settings</button>
         </ion-list>
     </ion-content>
 
